Update landing page for compliance and policy safety

--- a/index.html
+++ b/index.html
@@ -1,165 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Health Report | Advertorial</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="A new natural approach that may help support ear comfort and reduce daily disruptions caused by ringing in the ears.">
+  <title>Consumer Information | Ear Comfort Resource</title>
 
-  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Educational information about common ear comfort concerns. Watch the official presentation to learn more." />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Optional: set a canonical if you have only one URL version -->
+  <!-- <link rel="canonical" href="https://earcomfortdaily.com/" /> -->
+
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-  <!-- TOP BAR -->
+  <!-- TOP NOTICE BAR (Transparency / Compliance) -->
   <div class="top-bar">
-    <span>Health Report | Advertorial</span>
-    <span id="date"></span>
+    <span><strong>Disclosure:</strong> This page contains affiliate links. We may earn a commission if you purchase through them.</span>
   </div>
 
-  <!-- MAIN CONTENT -->
   <main class="container">
 
-    <h1>A New Natural Approach Is Helping Adults Manage Ringing in the Ears</h1>
+    <!-- ABOVE THE FOLD TRUST + DISCLAIMER -->
+    <section class="notice-box" aria-label="Important notice">
+      <p><strong>Important:</strong> This website provides general educational information only. It is not medical advice.</p>
+      <p>If you have a medical condition, symptoms, or concerns, consult a qualified healthcare professional.</p>
+    </section>
 
-    <h2>Many Americans over 40 are discovering a simple daily method that may help support ear comfort — without invasive procedures.</h2>
+    <h1>Educational Resource: Common Causes That May Affect Ear Comfort</h1>
 
-    <img 
-  src="images/adulto.png" alt="Middle-aged man at home with a thoughtful expression" class="content-image">
+    <h2>
+      If you experience ringing, buzzing, or other ear discomfort, the official presentation below explains one approach people are exploring.
+    </h2>
+
+    <img
+      src="images/adulto.png"
+      alt="Adult at home reading information on a laptop"
+      class="content-image"
+      loading="lazy"
+      decoding="async"
+    />
 
     <p>
-      If you experience constant ringing, buzzing, or hissing sounds in your ears, you’re not alone.
-      Millions of adults report discomfort that affects focus, sleep, and overall quality of life.
+      Many adults report occasional ear discomfort that can feel distracting—especially in quiet environments.
+      Several factors may contribute, including lifestyle, stress, sleep quality, and overall wellness.
     </p>
 
     <p>
-      For many people, symptoms appear gradually — and traditional options often feel limited or ineffective.
-      But a growing number of adults are now exploring a natural daily support approach that’s gaining attention across the United States.
+      Because causes vary from person to person, the most reliable way to understand any specific product approach
+      is to review the official information directly from the provider.
     </p>
 
-    <h3>A Relatable Story</h3>
-
-    <p>
-      Mark, 52, from Texas, says the ringing in his ears became harder to ignore over time.
-    </p>
-
-    <p>
-      “The worst part was at night. The silence made it impossible to relax,” he explains.
-      After trying several common approaches with little improvement, Mark began looking for alternatives focused on daily ear and nerve support.
-    </p>
-
+    <!-- PRIMARY CTA -->
     <div class="cta">
-      <a href="https://www.antitar.com/buygoods-antitar-tsl/?aff_id=5559
-" target="_blank">Watch the Official Presentation</a>
+      <a
+        href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Watch the official presentation on the provider website"
+      >
+        Watch the Official Presentation
+      </a>
+      <p class="cta-subtext">Opens the provider’s official page in a new tab.</p>
     </div>
+
+    <hr class="divider" />
+
+    <h3>What you’ll find in the official presentation</h3>
+    <ul>
+      <li>How the approach is described by the provider</li>
+      <li>Who it may be intended for (and who it may not be for)</li>
+      <li>Usage details, ingredients, and important notes</li>
+      <li>Current availability and official terms</li>
+    </ul>
 
     <div class="section-highlight">
-    <h3>Why This Approach Is Getting Attention</h3>
-    </div>  
-
-    <p>
-      Some specialists believe ear discomfort may be influenced by factors such as circulation, nerve signaling,
-      stress response, and nutrient balance.
-    </p>
-
-    <p>
-      That’s why certain daily routines and natural ingredients designed to support auditory health are now gaining attention —
-      not as a cure, but as part of a long-term support strategy.
-    </p>
-
-    <h3>What Is AntiTAR?</h3>
-
-    <p>
-      AntiTAR is a dietary supplement created to support ear health and auditory comfort.
-      It uses a blend of carefully selected natural ingredients designed for daily use.
-    </p>
-
-    <ul>
-      <li>May help support auditory comfort</li>
-      <li>May reduce daily disruptions caused by ringing</li>
-      <li>Supports ear and nerve health</li>
-      <li>Supports relaxation and sleep quality</li>
-    </ul>
-
-    <div class="cta">
-      <a href="https://www.antitar.com/buygoods-antitar-tsl/?aff_id=5559
-" target="_blank">Check Availability on the Official Website</a>
+      <h3>Read this before clicking</h3>
     </div>
 
-    <h3>Who This May Be For</h3>
+    <p>
+      We do not make medical claims on this website. Any product information, statements, and details should be verified
+      on the official provider page.
+    </p>
 
-    <ul>
-      <li>Adults 35 years and older</li>
-      <li>People experiencing ringing or buzzing discomfort</li>
-      <li>Those seeking a natural daily support option</li>
-    </ul>
+    <p>
+      Individual experiences can vary. If you are under 18, pregnant, nursing, or taking medication,
+      consult a professional before using any supplement.
+    </p>
 
-    <h3>Who This May Not Be For</h3>
+    <img
+      src="images/adulto-relaxando.png"
+      alt="Calm home environment representing a healthy routine"
+      class="content-image"
+      loading="lazy"
+      decoding="async"
+    />
 
-    <ul>
-      <li>Individuals under 18</li>
-      <li>Pregnant or nursing women</li>
-      <li>Anyone with medical conditions should consult a professional</li>
-    </ul>
-
-    <h3>Frequently Asked Questions</h3>
-
-    <p><strong>Is this a medical treatment?</strong><br>
-    No. AntiTAR is a dietary supplement intended for daily support, not a medical treatment.</p>
-
-    <p><strong>How long until results?</strong><br>
-    Results vary. Some people report changes sooner, while others take longer.</p>
-
-    <p><strong>Is it safe?</strong><br>
-    When used as directed, it is considered safe for most adults.</p>
-
-    <p><strong>Where can I buy it?</strong><br>
-    AntiTAR is available exclusively through the official website.</p>
-
-    <img 
-  src="images/adulto-relaxando.png" alt="Calm home environment representing comfort and routine" class="content-image">
-
-
+    <!-- SECONDARY CTA -->
     <div class="cta final">
-      <a href="https://www.antitar.com/buygoods-antitar-tsl/?aff_id=5559
-" target="_blank">See Today’s Offer on the Official Website</a>
+      <a
+        href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Visit the Official Website
+      </a>
+      <p class="cta-subtext">Review details, terms, and availability directly with the provider.</p>
     </div>
 
   </main>
 
-  <!-- FOOTER -->
-  <footer>
+  <footer class="footer">
     <p>
-      This website is for informational purposes only and does not provide medical advice.
-      Results may vary.
+      <strong>Medical Disclaimer:</strong> This website is for informational purposes only and does not provide medical advice.
+      This site does not diagnose, treat, cure, or prevent any disease.
     </p>
 
     <p>
-      This page contains affiliate links. If you purchase through these links, we may earn a commission at no additional cost to you.
+      <strong>Affiliate Disclosure:</strong> This page contains affiliate links. If you purchase through these links,
+      we may earn a commission at no additional cost to you.
     </p>
 
     <p>
-      This site is not affiliated with Facebook or Google.
+      This site is not affiliated with Google, Facebook, or their services.
     </p>
 
-    <div class="footer-links">
-      <a href="#">Privacy Policy</a> |
-      <a href="#">Terms of Use</a> |
-      <a href="#">Contact</a>
+    <div class="footer-links" aria-label="Legal links">
+      <a href="/privacy.html">Privacy Policy</a> |
+      <a href="/terms.html">Terms of Use</a> |
+      <a href="/disclaimer.html">Disclaimer</a> |
+      <a href="/contact.html">Contact</a>
     </div>
   </footer>
-
-  <script>
-    const date = new Date().toLocaleDateString('en-US', {
-      year: 'numeric',
-      month: 'long',
-      day: 'numeric'
-    });
-    document.getElementById('date').innerText = date;
-  </script>
 
 </body>
 </html>
