Atualiza layout da landing page

--- a/index.html
+++ b/index.html
@@ -1,143 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>Ear Comfort Daily – Hearing Wellness Education</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Consumer Information | Ear Comfort Resource</title>
+  <!-- SEO + Compliance -->
+  <meta name="description" content="Educational content about hearing comfort, ringing sounds, and daily ear wellness for adults.">
+  <meta name="robots" content="index, follow">
 
-  <meta name="description" content="Educational information about common ear comfort concerns. Watch the official presentation to learn more." />
-  <meta name="robots" content="index,follow" />
-
-  <!-- Optional: set a canonical if you have only one URL version -->
-  <!-- <link rel="canonical" href="https://earcomfortdaily.com/" /> -->
-
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <!-- TOP NOTICE BAR (Transparency / Compliance) -->
-  <div class="top-bar">
-    <span><strong>Disclosure:</strong> This page contains affiliate links. We may earn a commission if you purchase through them.</span>
+  <!-- AFFILIATE DISCLOSURE -->
+  <div class="disclosure">
+    This site contains affiliate links. If you purchase through these links, we may earn a commission at no additional cost to you.
   </div>
 
   <main class="container">
 
-    <!-- ABOVE THE FOLD TRUST + DISCLAIMER -->
-    <section class="notice-box" aria-label="Important notice">
-      <p><strong>Important:</strong> This website provides general educational information only. It is not medical advice.</p>
-      <p>If you have a medical condition, symptoms, or concerns, consult a qualified healthcare professional.</p>
+    <!-- HEADLINE -->
+    <h1>
+      Why Are So Many Adults Over 45 Noticing Ringing Sounds in Quiet Moments?
+    </h1>
+
+    <p class="subtitle">
+      Researchers are taking a closer look at hearing comfort, lifestyle habits, and daily ear wellness — especially as we age.
+    </p>
+
+    <!-- HERO IMAGE -->
+    <div class="hero">
+      <img src="images/adulto.png" alt="Adult reflecting quietly at home">
+    </div>
+
+    <!-- INTRO / EMPATHY -->
+    <section class="content">
+
+      <p class="empathy">
+        For many people, these sounds don’t appear during busy daytime hours — they tend to show up late at night, when everything is quiet and the mind is finally trying to rest.
+      </p>
+
+      <p>
+        Many adults report noticing subtle ringing, buzzing, or humming sounds, particularly in calm environments. While the experience can vary from person to person, it often leads people to search for answers and reassurance.
+      </p>
+
+      <p>
+        According to health professionals, hearing comfort may be influenced by a combination of lifestyle habits, environmental exposure, and natural age-related changes over time.
+      </p>
+
+      <!-- VISUAL BREAK -->
+      <div class="info-box">
+        <p>
+          Rather than quick fixes, many experts emphasize understanding daily habits and supportive wellness approaches that focus on long-term ear health.
+        </p>
+      </div>
+
+      <!-- EDUCATIONAL SECTION -->
+      <h2>Common Factors Often Linked to Ear Discomfort</h2>
+
+      <ul>
+        <li>Long-term exposure to loud environments</li>
+        <li>Ongoing stress and sleep disruption</li>
+        <li>Nutritional gaps that may develop over time</li>
+        <li>Reduced circulation as part of the aging process</li>
+      </ul>
+
+      <p>
+        Because every individual is different, many adults choose to review educational resources and official presentations before making any personal decisions.
+      </p>
+
+      <!-- CTA -->
+      <div class="cta-box">
+        <p class="cta-intro">
+          Many adults choose to review the official presentation to better understand this approach.
+        </p>
+
+        <a 
+          href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459&utm_source=native&utm_campaign=earcomfort&utm_ad=prelander_v2" 
+          target="_blank" 
+          class="cta-button"
+          id="ctaClick">
+          Watch the Official Presentation
+        </a>
+
+        <p class="cta-note">
+          You will be redirected to the official website for detailed information.
+        </p>
+      </div>
+
+      <!-- FAQ -->
+      <h2>Frequently Asked Questions</h2>
+
+      <div class="faq">
+        <p><strong>Is this medical advice?</strong><br>
+        No. This page is for educational purposes only and does not replace professional medical guidance.</p>
+
+        <p><strong>Who is this information for?</strong><br>
+        Adults interested in learning more about hearing comfort and daily ear wellness.</p>
+
+        <p><strong>Do I need a prescription?</strong><br>
+        Any product or approach details are explained on the official website.</p>
+
+        <p><strong>How long does one bottle last?</strong><br>
+        Usage information is provided in the official presentation.</p>
+
+        <p><strong>Are results guaranteed?</strong><br>
+        Individual experiences vary. No outcomes are guaranteed.</p>
+      </div>
+
     </section>
 
-    <h1>Educational Resource: Common Causes That May Affect Ear Comfort</h1>
+    <!-- FOOTER -->
+    <footer class="footer">
+      <a href="#">Privacy Policy</a> |
+      <a href="#">Terms of Service</a> |
+      <a href="#">Disclaimer</a> |
+      <a href="#">Contact</a>
 
-    <h2>
-      If you experience ringing, buzzing, or other ear discomfort, the official presentation below explains one approach people are exploring.
-    </h2>
-
-    <img
-      src="images/adulto.png"
-      alt="Adult at home reading information on a laptop"
-      class="content-image"
-      loading="lazy"
-      decoding="async"
-    />
-
-    <p>
-      Many adults report occasional ear discomfort that can feel distracting—especially in quiet environments.
-      Several factors may contribute, including lifestyle, stress, sleep quality, and overall wellness.
-    </p>
-
-    <p>
-      Because causes vary from person to person, the most reliable way to understand any specific product approach
-      is to review the official information directly from the provider.
-    </p>
-
-    <!-- PRIMARY CTA -->
-    <div class="cta">
-      <a
-        href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459"
-        target="_blank"
-        rel="noopener noreferrer"
-        aria-label="Watch the official presentation on the provider website"
-      >
-        Watch the Official Presentation
-      </a>
-      <p class="cta-subtext">Opens the provider’s official page in a new tab.</p>
-    </div>
-
-    <hr class="divider" />
-
-    <h3>What you’ll find in the official presentation</h3>
-    <ul>
-      <li>How the approach is described by the provider</li>
-      <li>Who it may be intended for (and who it may not be for)</li>
-      <li>Usage details, ingredients, and important notes</li>
-      <li>Current availability and official terms</li>
-    </ul>
-
-    <div class="section-highlight">
-      <h3>Read this before clicking</h3>
-    </div>
-
-    <p>
-      We do not make medical claims on this website. Any product information, statements, and details should be verified
-      on the official provider page.
-    </p>
-
-    <p>
-      Individual experiences can vary. If you are under 18, pregnant, nursing, or taking medication,
-      consult a professional before using any supplement.
-    </p>
-
-    <img
-      src="images/adulto-relaxando.png"
-      alt="Calm home environment representing a healthy routine"
-      class="content-image"
-      loading="lazy"
-      decoding="async"
-    />
-
-    <!-- SECONDARY CTA -->
-    <div class="cta final">
-      <a
-        href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        Visit the Official Website
-      </a>
-      <p class="cta-subtext">Review details, terms, and availability directly with the provider.</p>
-    </div>
+      <p class="copyright">
+        © 2026 Ear Comfort Daily. All rights reserved.
+      </p>
+    </footer>
 
   </main>
 
-  <footer class="footer">
-    <p>
-      <strong>Medical Disclaimer:</strong> This website is for informational purposes only and does not provide medical advice.
-      This site does not diagnose, treat, cure, or prevent any disease.
-    </p>
-
-    <p>
-      <strong>Affiliate Disclosure:</strong> This page contains affiliate links. If you purchase through these links,
-      we may earn a commission at no additional cost to you.
-    </p>
-
-    <p>
-      This site is not affiliated with Google, Facebook, or their services.
-    </p>
-
-    <div class="footer-links" aria-label="Legal links">
-      <a href="/privacy.html">Privacy Policy</a> |
-      <a href="/terms.html">Terms of Use</a> |
-      <a href="/disclaimer.html">Disclaimer</a> |
-      <a href="/contact.html">Contact</a>
-    </div>
-  </footer>
+  <!-- BASIC CLICK TRACKING -->
+  <script>
+    document.getElementById("ctaClick").addEventListener("click", function () {
+      console.log("CTA clicked");
+    });
+  </script>
 
 </body>
 </html>
+
