Atualiza layout da landing page

--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
   <main class="container">
 
     <!-- HEADLINE -->
-    <h1>
-      Why Are So Many Adults Over 45 Noticing Ringing Sounds in Quiet Moments?
-    </h1>
+    <h1>Understanding Hearing Comfort and Wellness as We Age</h1>
 
-    <p class="subtitle">
-      Researchers are taking a closer look at hearing comfort, lifestyle habits, and daily ear wellness — especially as we age.
-    </p>
+<div class="google-disclaimer">
+  <strong>This content is for educational purposes only and does not provide medical advice, diagnosis, or treatment.</strong>
+</div>
+
+<p class="subtitle">
+  This page shares general educational information about hearing comfort,
+  lifestyle habits, and wellness topics.
+</p>
+
 
     <!-- HERO IMAGE -->
     <div class="hero">
@@ -77,13 +81,10 @@
           Many adults choose to review the official presentation to better understand this approach.
         </p>
 
-        <a 
-          href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459&utm_source=native&utm_campaign=earcomfort&utm_ad=prelander_v2" 
-          target="_blank" 
-          class="cta-button"
-          id="ctaClick">
-          Watch the Official Presentation
-        </a>
+        <a href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459"
+   class="cta-button" target="_blank">
+  Review Educational Information
+</a>
 
         <p class="cta-note">
           You will be redirected to the official website for detailed information.
