Atualiza layout da landing page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <title>Ear Comfort Daily – Hearing Wellness Education</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17240610080"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17240610080');
+</script>
 
   <!-- SEO + Compliance -->
   <meta name="description" content="Educational content about hearing comfort, ringing sounds, and daily ear wellness for adults.">
