Optimize landing page for compliance and conversion

--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
   <meta charset="UTF-8">
   <title>Ear Comfort Daily – Hearing Wellness Education</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17240610080"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'AW-17240610080');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17240610080"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-17240610080');
+  </script>
 
   <!-- SEO + Compliance -->
-  <meta name="description" content="Educational content about hearing comfort, ringing sounds, and daily ear wellness for adults.">
+  <meta name="description" content="Educational content about hearing comfort, lifestyle habits, and general wellness topics for adults.">
   <meta name="robots" content="index, follow">
 
   <link rel="stylesheet" href="style.css">
@@ -34,40 +33,51 @@
     <!-- HEADLINE -->
     <h1>Understanding Hearing Comfort and Wellness as We Age</h1>
 
-<div class="google-disclaimer">
-  <strong>This content is for educational purposes only and does not provide medical advice, diagnosis, or treatment.</strong>
-</div>
+    <!-- MEDICAL DISCLAIMER -->
+    <div class="google-disclaimer">
+      <strong>
+        This content is for educational purposes only and does not provide medical advice,
+        diagnosis, or treatment.
+      </strong>
+    </div>
 
-<p class="subtitle">
-  This page shares general educational information about hearing comfort,
-  lifestyle habits, and wellness topics.
-</p>
-
+    <p class="subtitle">
+      This page shares general educational information about hearing comfort,
+      lifestyle habits, and wellness topics.
+    </p>
 
     <!-- HERO IMAGE -->
     <div class="hero">
       <img src="images/adulto.png" alt="Adult reflecting quietly at home">
     </div>
 
-    <!-- INTRO / EMPATHY -->
+    <!-- CONTENT -->
     <section class="content">
 
+      <!-- EMPATHY -->
       <p class="empathy">
-        For many people, these sounds don’t appear during busy daytime hours — they tend to show up late at night, when everything is quiet and the mind is finally trying to rest.
+        For many people, these sounds don’t appear during busy daytime hours —
+        they tend to show up late at night, when everything is quiet and the mind
+        is finally trying to rest.
       </p>
 
       <p>
-        Many adults report noticing subtle ringing, buzzing, or humming sounds, particularly in calm environments. While the experience can vary from person to person, it often leads people to search for answers and reassurance.
+        Many adults report noticing subtle ringing, buzzing, or humming sounds,
+        particularly in calm environments. While the experience can vary from
+        person to person, it often leads people to search for answers and reassurance.
       </p>
 
       <p>
-        According to health professionals, hearing comfort may be influenced by a combination of lifestyle habits, environmental exposure, and natural age-related changes over time.
+        According to health professionals, hearing comfort may be influenced by
+        a combination of lifestyle habits, environmental exposure, and natural
+        age-related changes over time.
       </p>
 
-      <!-- VISUAL BREAK -->
+      <!-- INFO BOX -->
       <div class="info-box">
         <p>
-          Rather than quick fixes, many experts emphasize understanding daily habits and supportive wellness approaches that focus on long-term ear health.
+          Rather than quick fixes, many experts emphasize understanding daily habits
+          and supportive wellness approaches that focus on long-term ear health.
         </p>
       </div>
 
@@ -82,22 +92,40 @@
       </ul>
 
       <p>
-        Because every individual is different, many adults choose to review educational resources and official presentations before making any personal decisions.
+        Because every individual is different, many adults choose to review
+        educational resources and official presentations before making any
+        personal decisions.
       </p>
+
+      <!-- TRANSITION BLOCK -->
+      <div class="transition-box">
+        <p>
+          <strong>Important:</strong> The next page contains an educational
+          presentation provided by the official source.
+        </p>
+        <p>
+          This information is intended for general education only and does not
+          replace professional medical advice.
+        </p>
+      </div>
 
       <!-- CTA -->
       <div class="cta-box">
         <p class="cta-intro">
-          Many adults choose to review the official presentation to better understand this approach.
+          Many adults choose to review the official educational presentation
+          to better understand this topic.
         </p>
 
         <a href="https://www.buyechoxen.com/vsl/Gunshot?aff_id=13459"
-   class="cta-button" target="_blank">
-  Review Educational Information
-</a>
+           id="ctaClick"
+           class="cta-button"
+           target="_blank"
+           rel="noopener noreferrer">
+          Watch the Educational Presentation
+        </a>
 
         <p class="cta-note">
-          You will be redirected to the official website for detailed information.
+          You will be redirected to the official website for detailed educational information.
         </p>
       </div>
 
@@ -105,20 +133,25 @@
       <h2>Frequently Asked Questions</h2>
 
       <div class="faq">
-        <p><strong>Is this medical advice?</strong><br>
-        No. This page is for educational purposes only and does not replace professional medical guidance.</p>
+        <p>
+          <strong>Is this medical advice?</strong><br>
+          No. This page is for educational purposes only and does not provide medical advice.
+        </p>
 
-        <p><strong>Who is this information for?</strong><br>
-        Adults interested in learning more about hearing comfort and daily ear wellness.</p>
+        <p>
+          <strong>Who is this information for?</strong><br>
+          Adults interested in learning more about hearing comfort and general wellness topics.
+        </p>
 
-        <p><strong>Do I need a prescription?</strong><br>
-        Any product or approach details are explained on the official website.</p>
+        <p>
+          <strong>Do I need a prescription?</strong><br>
+          Any product or approach details are explained on the official website.
+        </p>
 
-        <p><strong>How long does one bottle last?</strong><br>
-        Usage information is provided in the official presentation.</p>
-
-        <p><strong>Are results guaranteed?</strong><br>
-        Individual experiences vary. No outcomes are guaranteed.</p>
+        <p>
+          <strong>Are results guaranteed?</strong><br>
+          Individual experiences vary. No outcomes are guaranteed.
+        </p>
       </div>
 
     </section>
@@ -137,13 +170,16 @@
 
   </main>
 
-  <!-- BASIC CLICK TRACKING -->
+  <!-- CTA TRACKING -->
   <script>
     document.getElementById("ctaClick").addEventListener("click", function () {
-      console.log("CTA clicked");
+      gtag('event', 'conversion', {
+        'send_to': 'AW-17240610080',
+        'event_category': 'CTA',
+        'event_label': 'VSL Click'
+      });
     });
   </script>
 
 </body>
 </html>
-
